<resources>
    <string name="app_name">Storage Manager</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="edit_query_hint">Good\'s name</string>
    <string name="producer">Producer</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="search">Search</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="dash_icon">Dash Icon</string>
    <string name="minus_button">Minus Button</string>
    <string name="plus_button">Plus Button</string>
    <string name="total_price">Total Price:</string>
    <string name="multiply_icon">Multiply Icon</string>
    <string name="equals_icon">Equals Icon</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="goods">Goods</string>
    <string name="groups">Groups</string>
    <string name="group_creation">Group Creation</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="goods_icon">Goods Icon</string>
    <string name="group">Group</string>
    <string name="good_creation">Good Creation</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome!</string>
    <string name="button_search">Button Search</string>
    <string name="current_amount">Current Amount</string>
    <string name="change_amount">Change Amount</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="number">Number</string>
    <string name="group_search_view_hint">Group\'s name...</string>
    <string name="producers">Producers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="producer_search_view_hint">Producer\'s name..</string>
    <string name="producer_creation">Producer Creation</string>
</resources>